# fighthealthinsurance

./: .coveragerc  .env.example  .gitattributes  .gitignore  API_KEYS_SETUP.md  BLOG_POST_GUIDE.md  CLAUDE.md  CLEANUP_IMPROVEMENT_TASKS.md  CLEANUP_NOTES.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PREMORTEM_REVIEW.md  README.md  Streaming-APIs-Spec.md  UCR-OON-Reimbursement-Plan.md  UX_NOTES.md  configurations_mypy_django_plugin.py  cypress.config.js  deploy-requirements.txt  environment.yml  generate_microsoft_ads_csv.py  generate_microsoft_ads_keywords.py  initial.py  llms.txt  local_encrypted_storage.yaml  local_encrypted_storage_p2.yaml  manage.py  memory  microsoft_ads_complete.csv  microsoft_ads_keywords.csv  microsoft_ads_microsites.csv  package-lock.json  package.json  pg-bootstrap-raw.yaml  pg-copy.yaml  pg-recover.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  (+6 more)
api/: mixins.py  serializers.py  urls.py  views.py
charts/: base_analytics.py  urls.py  views.py
conf/: local.env  nginx.default
data/: medicaid_resources.csv
docs/: INSURANCE_COMPANY_PLAN_EXTRACTION.md  INSURANCE_FEATURE_README.md  INSURANCE_MODEL_DIAGRAM.md  pg-reliability-hardening.md  pg8-to-pg9-migration-runbook.md
fhi_users/: admin.py  audit.py  audit_models.py  audit_service.py  audit_utils.py  emails.py  models.py  urls.py
fighthealthinsurance/: actor_health_status.py  actor_ref_config.py  admin.py  appeal_deadlines.py  apps.py  asgi.py  base_actor_ref.py  base_refresh_actor.py  brand_config.py  business_hours.py  calendar_emails.py  (+130 more)
(+989 files in other folders)
