[project]
name = "fighthealthinsurance"
version = "0.0.1"
description = "Fight Health Insurance"
requires-python = ">=3.11"

[tool.ty]
# Rules configuration - ignore unresolved imports
[tool.ty.rules]
unresolved-import = "ignore"

# Source files configuration
[tool.ty.src]
# Exclude patterns (similar to .gitignore)
exclude = [
    ".tox",
    ".eggs",
    ".history",
    "env",
    "build",
    "dist",
    "*.egg-info",
    "__pycache__",
]
